# rust-media-server

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
cfg/: media_server.yaml
cfg/features/: recording.yaml  snapshot.yaml  streaming.yaml
cfg/sources/: source_cam0.yaml  source_cam1.yaml
ext/: wrapper_gstd.h
src/: lib.rs
src/adapters/: factories.rs  file_logger.rs  gstc_manager.rs  mod.rs  yaml_parser.rs
src/app/: factory.rs  media_server.rs  mod.rs
src/app/services/: mod.rs  pipeline_orchestrator.rs
src/common/: config.rs  errors.rs  logging.rs  mod.rs  pipeline_config.rs
src/ports/: ifileparser.rs  ilogger.rs  imessagereader.rs  ipipeline.rs  mod.rs
